fix tree expando being invisible on selected tree nodes

--- a/themes/compact.css
+++ b/themes/compact.css
@@ -1945,6 +1945,9 @@ body.ttrss_utility.share_popup .content {
 .flat .dijitTree .dijitTreeNode .dijitTreeRow.dijitTreeRowSelected {
   color: white;
 }
+.flat .dijitTree .dijitTreeNode .dijitTreeRow.dijitTreeRowSelected .dijitTreeExpando {
+  color: white;
+}
 .flat .dijitTree .labelParam {
   float: right;
   margin-right: 16px;
