--- a/themes/light/dijit_basic.less
+++ b/themes/light/dijit_basic.less
@@ -141,6 +141,10 @@
 
 		.dijitTreeNode .dijitTreeRow.dijitTreeRowSelected {
 			color : white;
+
+			.dijitTreeExpando {
+				color : white;
+			}
 		}
 
 		/*.dijitTreeRow .dijitTreeExpando {
